Fix icon alignment problem in input

--- a/ui/components/app/snaps/snap-ui-renderer/index.scss
+++ b/ui/components/app/snaps/snap-ui-renderer/index.scss
@@ -28,6 +28,10 @@
 
   &__panel {
     gap: 8px;
+
+    .mm-icon--size-inherit {
+      top: 0;
+    }
   }
 
   &__text {
